# YOLOFlow

./: .dockerignore  .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/app/: __init__.py  database.py  flows.py  main.py  models.py  schemas.py
backend/app/routers/: flows.py  stepper.py
docker/: Dockerfile  docker-compose.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
frontend/src/components/: ImageCanvas.jsx  ImageCanvas.tsx  Layout.jsx  Layout.tsx  StepperNav.jsx  StepperNav.tsx
frontend/src/mocks/: data.ts  handlers.ts
frontend/src/pages/: DatasetImagesView.tsx  DatasetPage.jsx  DatasetPage.tsx  FlowWizardPage.tsx  FlowsPage.tsx
frontend/src/types/: index.ts
scripts/: copy_image_to_local.sh
