[project]
name = "yoloflow-backend"
version = "0.1.0"
description = "Backend for YOLOFlow"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "mlflow>=2.10.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "alembic>=1.13.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
