[project]
name = "yoloflow-backend"
version = "0.1.0"
description = "Backend for YOLOFlow"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "mlflow>=2.10.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "alembic>=1.13.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "S", "B", "A", "C4", "T20", "PT", "RET", "SIM", "ARG", "ERA", "PL", "TRY", "RUF"]
ignore = ["B008", "S104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
